99559830 - Resolved issue with row highlighting for odd rows, created global class for applying background color to rows on the list and search result pages.  Added functionality to support using the shift key to select a range of items on the list page, this also allows single select.

--- a/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/pages/_search-results.scss
+++ b/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/pages/_search-results.scss
@@ -299,10 +299,6 @@
   margin:15px 0 15px 0;
 }
 
-.searchItemDetails:nth-of-type(odd) {
-  background-color: $color-white !important;
-}
-
 .search-results-pagination {
   margin-bottom: 14px !important; 
   margin-top: 15px !important;
